--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+  transition: 0.5s;
+  text-decoration: none;
+  color: black;
+}
+
 .header {
   background-color: white;
   color: black;
@@ -20,6 +26,24 @@ body {
   padding: 40px;
   height: 40px;
   z-index: 1;
+}
+
+.header h1 {
+  transition: 0.5s;
+}
+
+.header h1:hover {
+  color: red;
+  transform: scale(1.01);
+}
+
+.header h1:hover span {
+  color: black;
+}
+
+.header span {
+  color: red;
+  transition: 0.5s;
 }
 
 .link-wrapper a {
@@ -39,7 +63,8 @@ body {
 
 #hero-section img {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 80px);
+  margin-top: 80px;
   object-fit: cover;
 }
 
@@ -48,7 +73,8 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 80px);
+  margin-top: 80px;
   background: rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
@@ -68,9 +94,54 @@ body {
   padding: 10px 20px;
   border: 2px solid white;
   font-size: 20px;
+  border-radius: 10px;
 }
 
 .hero-image-overlay a:hover {
   background-color: white;
   color: black;
+}
+
+.section {
+  min-height: 60vh;
+}
+
+#services-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.service-card {
+  width: 300px;
+  margin: 2%;
+  background-color: white;
+  border-radius: 10px;
+  min-height: 40vh;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: 0.5s;
+}
+
+.service-card:hover {
+  transform: scale(1.01);
+}
+
+.service-card-header-wrapper {
+  width: 100%;
+  background-color: red;
+  color: white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.service-card-header-wrapper i {
+  border-radius: 50%;
+  background-color: black;
+  padding: 15px;
+  font-size: 20px;
 }
