--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ a {
   color: black;
 }
 
+span {
+  color: red;
+}
+
 .header {
   background-color: white;
   color: black;
@@ -223,4 +227,86 @@ a {
 }
 
 #social-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#social-section h2 {
+  font-size: 50px;
+}
+
+.social-icons-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icons-wrapper i {
+  margin: 20px;
+  font-size: 45px;
+  padding: 10px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.social-icons-wrapper i:hover {
+  color: red;
+}
+
+footer {
+  background-color: rgb(37, 37, 37);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0px;
+}
+
+#contact-section form {
+  background-color: whitesmoke;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 90%;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+#contact-section form input,
+#contact-section form textarea {
+  width: 90%;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px 0;
+  border: 2px solid #acacac;
+  font-size: 15px;
+}
+
+#contact-section form input:focus,
+#contact-section form textarea:focus {
+  outline: none;
+  box-shadow: 0px 0px 5px black;
+}
+
+#contact-section form button {
+  align-self: flex-end;
+  margin-right: 5%;
+  background-color: transparent;
+  border-radius: 10px;
+  border: 2px solid red;
+  color: black;
+  padding: 10px 20px;
+  margin-top: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+#contact-section form button:hover {
+  background-color: black;
+  color: white;
 }
