--- a/css/style.css
+++ b/css/style.css
@@ -599,3 +599,56 @@ footer {
   border-bottom: 1px solid white;
   display: block;
 }
+
+#message-confirmation {
+  height: 50%;
+  width: 50%;
+  position: fixed;
+  top: 20vh;
+  left: 25vw;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  color: black;
+}
+
+#message-confirmation button {
+  padding: 10px 20px;
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: transparent;
+  font-size: 20px;
+  color: red;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+#message-confirmation button:hover {
+  background-color: red;
+  color: white;
+}
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid red;
+  border-radius: 50%;
+  animation-name: spin;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
